manifests/books-service-static-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: books
  labels:
    app: books
spec:
  selector:
    app: books
    tier: web
  ports:
  - port: 80
    targetPort: 3000
  type: LoadBalancer
  loadBalancerIP: "YOUR.IP.ADDRESS.HERE"
