manifests/books-ingress-static-ip.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: books
  annotations:
    kubernetes.io/ingress.global-static-ip-name: books-ip
  labels:
    app: books
spec:
  backend:
    serviceName: books-backend
    servicePort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: books-backend
  labels:
    app: books
spec:
  type: NodePort
  selector:
    app: book
    tier: web
  ports:
  - port: 8080
    targetPort: 8080
